# trajectory

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  main.py  package.json  pyproject.toml
src/: App.tsx  main.py  response.ts  style.scss
src/clients/: base.py
src/clients/schedule/: schedule.py  schemas.py
src/components/: Button.tsx  EditField.tsx  Map.tsx
src/components/Card/: CarItem.tsx  CarList.tsx
src/components/Sort/: SortItem.tsx  SortList.tsx
src/logger/: __init__.py  config.py  enums.py  factory.py
src/redux/: api.ts
src/schemas/: common.py  schedule.py
src/services/schedule/: __init__.py  exceptions.py  schedule.py
src/types/: types.ts
tests/: test_schemas.py
tests/clients/: test_schedule.py
tests/services/: conftest.py  test_schedule.py
