[project]
name = "trajectory"
version = "0.1.0"
description = "Trajectory test task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["D", "CPY001", "COM812"]


[tool.mypy]
incremental = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
explicit_package_bases = true

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
force_sort_within_sections = true
float_to_top = true