[project]
name = "trajectory"
version = "0.1.0"
description = "Trajectory test task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "hupper>=1.12.1",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]
tests = [
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "respx>=0.22.0",
]

[tool.ruff]
line-length = 120
lint.preview = true
lint.select = ["ALL"]
lint.ignore = [
    "CPY001", #  Missing copyright notice at top of file
    "COM812", # Skip list trailint slash (because using isort black formatter)
    "D", # All docstrings
    "DOC", # All docstrings
    "E402", # Module level import not at top of file (because using isort black formatter)
    "EM", # Raw string exception message
    "FIX", # All FIXMEs
    "I", # All imports (because using isort)
    "RUF002", # Skip validate cirillic letters means latins letters
    "RUF003", # Skip validate cirillic letters means latins letters in docstrings
    "TRY003", # Avoid specifying long messages outside the exception class
    "TD", # All TODOs
]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    "FBT001", # Boolean positional arg in function definition
    "S101", # Use of `assert` detected
    "PLR2004" # Magic value used in comparison
]


[tool.mypy]
mypy_path = "src"
plugins = "pydantic.mypy"
incremental = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
explicit_package_bases = true
exclude = "tests"

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
force_sort_within_sections = true
float_to_top = true

[tool.coverage.html]
directory = "tests/htmlcov"

[tool.coverage.run]
omit = ["*/__init__.py"]
